--- a/components/about.html
+++ b/components/about.html
@@ -9,7 +9,7 @@
             </p>
         </div>
         <div id="sm-links" class="mt-3 flex flex-wrap gap-2 text-md md:text-lg lg:text-xl xl:text-2xl justify-center md:justify-start">
-            <a href="../assets/resume/Gopinath_Resume.pdf" target="_blank"  download class="h-12 border-2 border-(--my-color) p-3 rounded-3xl text-(--my-color) hover:bg-(--my-color) dark:hover:text-black dark:focus:text-black dark:active:text-black hover:text-white hover:scale-110 active:bg-(--my-color) active:text-white active:scale-110 focus:bg-(--my-color) focus:text-white focus:scale-110 transition-all duration-300 ease-in-out flex justify-center items-center">RESUME  <i class="fa-solid fa-download text-xl"></i></a>
+            <a href="assets/resume/Gopinath_Resume.pdf" target="_blank"  download class="h-12 border-2 border-(--my-color) p-3 rounded-3xl text-(--my-color) hover:bg-(--my-color) dark:hover:text-black dark:focus:text-black dark:active:text-black hover:text-white hover:scale-110 active:bg-(--my-color) active:text-white active:scale-110 focus:bg-(--my-color) focus:text-white focus:scale-110 transition-all duration-300 ease-in-out flex justify-center items-center">RESUME  <i class="fa-solid fa-download text-xl"></i></a>
             <a href="https://www.leetcode.com/u/gopinath5002/" target="_blank" class="w-12 h-12 border-2 text-xl border-(--my-color) p-3 rounded-full text-(--my-color) hover:bg-(--my-color) dark:hover:text-black dark:focus:text-black dark:active:text-black hover:text-white hover:scale-120 active:bg-(--my-color) active:text-white active:scale-120 focus:bg-(--my-color) focus:text-white focus:scale-120 transition-all duration-300 ease-in-out flex items-center justify-center"><i class="fa-solid fa-code"></i></a>
             <a href="https://www.github.com/Gopinath5002/" target="_blank" class="w-12 h-12 border-2 text-xl border-(--my-color) p-3 rounded-full text-(--my-color) hover:bg-(--my-color) dark:hover:text-black dark:focus:text-black dark:active:text-black hover:text-white hover:scale-120 active:bg-(--my-color) active:text-white active:scale-120 focus:bg-(--my-color) focus:text-white focus:scale-120 transition-all duration-300 ease-in-out flex items-center justify-center"><i class="fa-brands fa-github"></i></a>
             <a href="https://www.linkedin.com/in/gopinath-g2005/" target="_blank" class="w-12 h-12 border-2 text-xl border-(--my-color) p-3 rounded-full text-(--my-color) hover:bg-(--my-color) dark:hover:text-black dark:focus:text-black dark:active:text-black hover:text-white hover:scale-120 active:bg-(--my-color) active:text-white active:scale-120 focus:bg-(--my-color) focus:text-white focus:scale-120 transition-all duration-300 ease-in-out flex items-center justify-center"><i class="fa-brands fa-linkedin"></i></a>
@@ -17,7 +17,7 @@
     </div>
     <div id="part2" class=" min-w-[50%] max-h-[10%] md:mt-12 flex items-center justify-center">
         <div class="animate-zoom-in img w-96 overflow-hidden ml-4 mr-4 p-5">
-            <img src="../assets/img/image.png" alt="Gopi_img" class="h-auto w-full border-2 border-(--my-color) rounded-full shadow-lg shadow-(color:--my-color)">
+            <img src="assets/img/image.png" alt="Gopi_img" class="h-auto w-full border-2 border-(--my-color) rounded-full shadow-lg shadow-(color:--my-color)">
         </div>
     </div>
 </div>
@@ -59,3 +59,4 @@
 ">
 <img src="../assets/img/image.png" alt="Gopi_img" class="h-auto w-full rounded-full ">
 </div> -->
+
