--- a/components/about.html
+++ b/components/about.html
@@ -17,7 +17,7 @@
     </div>
     <div id="part2" class=" min-w-[50%] max-h-[10%] md:mt-12 flex items-center justify-center">
         <div class="animate-zoom-in img w-96 overflow-hidden ml-4 mr-4 p-5">
-            <img src="assets/img/image.png" alt="Gopi_img" class="h-auto w-full border-2 border-(--my-color) rounded-full shadow-lg shadow-(color:--my-color)">
+            <img src="assets/img/gopinath_img.webp" loading="eager" fetchpriority="high" alt="Gopi_img" class="h-auto w-full border-2 border-(--my-color) rounded-full shadow-lg shadow-(color:--my-color)">
         </div>
     </div>
 </div>
@@ -50,13 +50,3 @@
 <div class="z-10 hidden lg:flex items-center justify-end text-sm md:text-base lg:text-lg xl:text-xl font-semibold fixed bg-white dark:bg-black lg:right-34 xl:right-50 top-20 border-2 border-(--my-color) rounded-full p-1 shadow-(color:--my-color) shadow-lg">
     <i id="color-picker2" class="ri-palette-line w-6 h-6 flex items-center justify-center cursor-pointer"></i>
 </div>
-
-<!-- <div class="relative w-80 h-80 rounded-full  flex items-center justify-center 
-       before:content-[''] before:absolute before:w-[105%] before:h-[105%]
-       before:rounded-full before:border-[6px] before:border-transparent
-       before:bg-linear-to-b before:from-(--my-color)   before:via-white   before:to-(--my-color)
-       before:animate-[spin_6s_linear_infinite] before:-z-50
-">
-<img src="../assets/img/image.png" alt="Gopi_img" class="h-auto w-full rounded-full ">
-</div> -->
-
