--- a/components/achievements.html
+++ b/components/achievements.html
@@ -10,7 +10,7 @@
                   <article class="card__article swiper-slide">
                      <div class="min-w-full min-h-full flex flex-col justify-center items-center gap-10">
                         <div class="card__image w-auto max-w-72 h-auto max-h-52">
-                        <img loading="lazy" src="assets/img/a2.jpg" alt="image" class="card__img rounded-lg sm:rounded-3xl w-72 h-full max-h-52 object-scale-down">
+                        <img loading="lazy" src="assets/img/certificate1.webp" alt="image" class="card__img rounded-lg sm:rounded-3xl w-72 h-full max-h-52 object-scale-down">
                         <div class="card__shadow"></div>
                      </div>
                      <div class="card__data flex flex-col w-auto max-w-72">
@@ -26,10 +26,9 @@
                   <article class="card__article swiper-slide">
                     <div class="min-w-full min-h-full flex flex-col justify-center items-center gap-10">
                         <div class="card__image w-auto max-w-72 h-auto max-h-52">
-                           <img loading="lazy" src="assets/img/a71.jpg" alt="image" class="card__img rounded-lg sm:rounded-3xl w-72 h-full max-h-52 object-scale-down">
+                           <img loading="lazy" src="assets/img/certificate2.webp" alt="image" class="card__img rounded-lg sm:rounded-3xl w-72 h-full max-h-52 object-scale-down">
                            <div class="card__shadow"></div>
                         </div>
-         
                         <div class="card__data min-h-[50%] flex flex-col w-auto max-w-72 ">
                            <div class="flex justify-between min-w-full">
                                <div class="text-lg md:text-xl lg:text-2xl font-bold text-(--my-color)">K.Ramakrishnan College of Engg</div>
@@ -39,14 +38,12 @@
                         </div>
                     </div>
                   </article>
-                  
                   <article class="card__article swiper-slide">
                     <div class="min-w-full min-h-full flex flex-col justify-center items-center gap-10 ">
                         <div class="card__image w-auto max-w-72 h-auto max-h-52">
-                           <img loading="lazy" src="assets/img/a72.jpg" alt="image" class="card__img rounded-lg sm:rounded-3xl w-72 h-full max-h-52 object-scale-down">
+                           <img loading="lazy" src="assets/img/certificate3.webp" alt="image" class="card__img rounded-lg sm:rounded-3xl w-72 h-full max-h-52 object-scale-down">
                            <div class="card__shadow"></div>
                         </div>
-         
                         <div class="card__data min-h-[50%] flex flex-col w-auto max-w-72 ">
                            <div class="flex justify-between min-w-full">
                                <div class="text-lg md:text-xl lg:text-2xl font-bold text-(--my-color)">Mookambigai College of Engg</div>
@@ -56,14 +53,12 @@
                         </div>
                     </div>
                   </article>
-                  
                   <article class="card__article swiper-slide">
                     <div class="min-w-full min-h-full flex flex-col justify-center items-center gap-10 ">
                         <div class="card__image w-auto max-w-72 h-auto max-h-52">
-                           <img loading="lazy" src="assets/img/a73.jpg" alt="image" class="card__img rounded-lg sm:rounded-3xl w-72 h-full max-h-52 object-scale-down">
+                           <img loading="lazy" src="assets/img/certificate4.webp" alt="image" class="card__img rounded-lg sm:rounded-3xl w-72 h-full max-h-52 object-scale-down">
                            <div class="card__shadow"></div>
                         </div>
-         
                         <div class="card__data min-h-[50%] flex flex-col w-auto max-w-72 ">
                            <div class="flex justify-between min-w-full">
                                <div class="text-lg md:text-xl lg:text-2xl font-bold text-(--my-color)">Bishop Heber College</div>
@@ -76,10 +71,9 @@
                   <article class="card__article swiper-slide">
                     <div class="min-w-full min-h-full flex flex-col justify-center items-center gap-10 ">
                         <div class="card__image w-auto max-w-72 h-auto max-h-52">
-                           <img loading="lazy" src="assets/img/a1.jpg" alt="image" class="card__img rounded-lg sm:rounded-3xl w-72 h-full max-h-52 object-scale-down">
+                           <img loading="lazy" src="assets/img/certificate5.webp" alt="image" class="card__img rounded-lg sm:rounded-3xl w-72 h-full max-h-52 object-scale-down">
                            <div class="card__shadow"></div>
                         </div>
-         
                         <div class="card__data min-h-[50%] flex flex-col w-auto max-w-72 ">
                            <div class="flex justify-between min-w-full">
                                <div class="text-lg md:text-xl lg:text-2xl font-bold text-(--my-color)">CARE College of Engg</div>
@@ -92,10 +86,9 @@
                   <article class="card__article swiper-slide">
                     <div class="min-w-full min-h-full flex flex-col justify-center items-center gap-10 ">
                         <div class="card__image w-auto max-w-72 h-auto max-h-52">
-                           <img loading="lazy" src="assets/img/a4.jpg" alt="image" class="card__img rounded-lg sm:rounded-3xl w-72 h-full max-h-52 object-scale-down">
+                           <img loading="lazy" src="assets/img/certificate6.webp" alt="image" class="card__img rounded-lg sm:rounded-3xl w-72 h-full max-h-52 object-scale-down">
                            <div class="card__shadow"></div>
                         </div>
-         
                         <div class="card__data min-h-[50%] flex flex-col w-auto max-w-72 ">
                            <div class="flex justify-between min-w-full">
                                <div class="text-lg md:text-xl lg:text-2xl font-bold text-(--my-color)">Mookambigai College of Engg</div>
@@ -108,10 +101,9 @@
                   <article class="card__article swiper-slide">
                     <div class="min-w-full min-h-full flex flex-col justify-center items-center gap-10 ">
                         <div class="card__image w-auto max-w-72 h-auto max-h-52">
-                           <img loading="lazy" src="assets/img/a3.jpg" alt="image" class="card__img rounded-lg sm:rounded-3xl w-72 h-full max-h-52 object-scale-down">
+                           <img loading="lazy" src="assets/img/certificate7.webp" alt="image" class="card__img rounded-lg sm:rounded-3xl w-72 h-full max-h-52 object-scale-down">
                            <div class="card__shadow"></div>
                         </div>
-         
                         <div class="card__data min-h-[50%] flex flex-col w-auto max-w-72 ">
                            <div class="flex justify-between min-w-full">
                                <div class="text-lg md:text-xl lg:text-2xl font-bold text-(--my-color)">K.Ramakrishnan College of Engg</div>
@@ -124,10 +116,9 @@
                   <article class="card__article swiper-slide">
                     <div class="min-w-full min-h-full flex flex-col justify-center items-center gap-10 ">
                         <div class="card__image w-auto max-w-72 h-auto max-h-52">
-                           <img loading="lazy" src="assets/img/a5.jpg" alt="image" class="card__img rounded-lg sm:rounded-3xl w-72 h-full max-h-52 object-scale-down">
+                           <img loading="lazy" src="assets/img/certificate8.webp" alt="image" class="card__img rounded-lg sm:rounded-3xl w-72 h-full max-h-52 object-scale-down">
                            <div class="card__shadow"></div>
                         </div>
-         
                         <div class="card__data min-h-[50%] flex flex-col w-auto max-w-72 ">
                            <div class="flex justify-between min-w-full">
                                <div class="text-lg md:text-xl lg:text-2xl font-bold text-(--my-color)">Sudharsan Engg College</div>
@@ -140,10 +131,9 @@
                   <article class="card__article swiper-slide">
                     <div class="min-w-full min-h-full flex flex-col justify-center items-center gap-10 ">
                         <div class="card__image w-auto max-w-72 h-auto max-h-52">
-                           <img loading="lazy" src="assets/img/a6.jpg" alt="image" class="card__img rounded-lg sm:rounded-3xl w-72 h-full max-h-52 object-scale-down">
+                           <img loading="lazy" src="assets/img/certificate9.webp" alt="image" class="card__img rounded-lg sm:rounded-3xl w-72 h-full max-h-52 object-scale-down">
                            <div class="card__shadow"></div>
                         </div>
-         
                         <div class="card__data min-h-[50%] flex flex-col w-auto max-w-72 ">
                            <div class="flex justify-between min-w-full">
                                <div class="text-lg md:text-xl lg:text-2xl font-bold text-(--my-color)">Jansons Institute of Tech</div>
