--- a/components/projects.html
+++ b/components/projects.html
@@ -9,7 +9,7 @@
                <div class="swiper-wrapper">
                   <article class="card__article swiper-slide">
                      <div class="card__image">
-                        <img src="assets/img/project2.png" alt="image" class="card__img rounded-2xl min-w-full min-h-full object-center">
+                        <img src="assets/img/project1.webp" alt="image" class="card__img rounded-2xl min-w-full min-h-full object-center">
                         <div class="card__shadow"></div>
                      </div>
                      <div class="card__data min-h-[50%] flex flex-col justify-center pt-8">
@@ -29,7 +29,7 @@
                   </article>
                   <article class="card__article swiper-slide">
                      <div class="card__image">
-                        <img src="assets/img/project3.jpg" alt="image" class="card__img rounded-2xl min-w-full min-h-full object-center">
+                        <img src="assets/img/project2.webp" alt="image" class="card__img rounded-2xl min-w-full min-h-full object-center">
                         <div class="card__shadow"></div>
                      </div>
                      <div class="card__data min-h-[50%] flex flex-col justify-center pt-8">
@@ -47,13 +47,11 @@
                     </div>
                     <div class="min-h-5"></div>
                   </article>
-                  
                   <article class="card__article swiper-slide">
                      <div class="card__image">
-                        <img src="assets/img/project1.png" alt="image" class="card__img rounded-2xl min-w-full min-h-full object-center">
+                        <img src="assets/img/project3.webp" alt="image" class="card__img rounded-2xl min-w-full min-h-full object-center">
                         <div class="card__shadow"></div>
                      </div>
-      
                      <div class="card__data min-h-[50%] flex flex-col justify-center pt-8">
                         <div class="flex justify-between min-w-full">
                             <div class="text-lg md:text-xl lg:text-2xl font-bold text-(--my-color)">Calculator</div>
@@ -80,61 +78,4 @@
          </div>
       </section>
     </div>
-<!-- <div class="flex items-center justify-center min-h-[screen] min-w-full mt-8">
-<div class="swiper h-max w-full font-semibold max-w-[700px] relative!">
-  <div class="flex justify-end md:justify-start">
-    <div class="mt-10 flex justify-between md:justify-between absolute gap-3 md:min-w-full">
-      <div class="swiper-button-prev text-(--my-color)! top-28! relative!"></div>
-      <div class="swiper-button-next text-(--my-color)! top-28! md:right-32! relative!"></div>
-  </div>
-  </div>
-  <div class="swiper-wrapper max-w-full md:first:ml-16">
-    <div class="swiper-slide">
-        <div class="flex flex-col-reverse items-start justify-center min-h-full gap-4">
-            <div class=" min-h-[50%] md:max-w-[82%] flex flex-col justify-center  ml-2">
-                <div class="flex justify-between min-w-full">
-                    <div class="text-lg md:text-xl lg:text-2xl xl:text-3xl font-bold text-(--my-color)">Tic Tac Toe</div>
-                    <div>
-                        <a href="https://github.com/Gopinath5002/tic-tac-toe" class="w-10 h-10 border-2 text-xl border-(--my-color) p-3 rounded-full text-(--my-color) hover:bg-(--my-color) hover:text-white hover:scale-110 transition-all duration-300 ease-in-out flex items-center justify-center">
-                            <i class="fa-brands fa-github"></i>
-                        </a>
-                    </div>
-                </div>
-                <div class="mt-5 text-base md:text-md lg:text-lg xl:text-xl ">Designed a rule-based gameplay system limiting each player to 3 X’s and 3 O’s, with automatic removal of the oldest symbol. Implemented a visual removal indicator and modern theme-based UI (dark/light mode) for enhanced strategy and user experience.
-                </div>
-                <div class="mt-5 text-(--my-color) text-lg md:text-xl lg:text-2xl xl:text-3xl">Python, Custom-Tkinter</div>
-            </div>
-            <div class="md:max-w-[82%] min-h-[50%]">
-                <img src="../assets/img/project2.png" alt="" class="rounded-2xl min-w-full min-h-full object-center">
-            </div>
-        </div>
-    </div>
-    <div class="swiper-slide md:pr-32 ">
-        <div class="flex flex-col-reverse items-start justify-center min-h-full gap-4">
-            <div class="md:min-w-[50%] h-full flex flex-col justify-center ml-2">
-                <div class="flex justify-between min-w-full">
-                    <div class="text-lg md:text-xl lg:text-2xl xl:text-3xl font-bold text-(--my-color)">Calculator</div>
-                    <div>
-                        <a href="https://github.com/Gopinath5002/calculator" class="w-10 h-10 border-2 text-xl border-(--my-color) p-3 rounded-full text-(--my-color) hover:bg-(--my-color) hover:text-white hover:scale-110 transition-all duration-300 ease-in-out flex items-center justify-center">
-                            <i class="fa-brands fa-github"></i>
-                        </a>
-                    </div>
-                </div>
-                <div class="mt-5 text-base md:text-md lg:text-lg xl:text-xl">Developed a GUI-based calculator using Python and Tkinter, supporting basic arithmetic operations with clear/delete functions and a user-friendly interface for efficient interaction.
-                </div>
-                <div class="mt-5 text-(--my-color) text-lg md:text-xl lg:text-2xl xl:text-3xl">Python, Tkinter</div>
-            </div>
-            <div class="md:min-w-[50%] min-h-full object-fill">
-                <img src="../assets/img/project1.png" alt="" class="rounded-2xl min-w-full min-h-full">
-            </div>
-        </div>
-    </div>
-    <div class="swiper-slide md:pr-32 text-lg md:text-xl lg:text-2xl xl:text-3xl">Coming soon!</div>
-  </div>
-
-</div>
-</div> -->
-<!-- <div class="relative min-h-[30px] max-w-[700px]"></div>
-<div class="swiper-scrollbar !bg-(--my-color)"></div> -->
-
 </div>
